# tamed-langevin

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
configs/: optimization_default.json  sampling_default.json
examples/: diagnostics_demo.py  double_well_sampling.py  superlinear_optimization.py
experiments/optimization/: run_superlinear_stress_test.py
experiments/sampling/: run_adaptive_sampling.py
scripts/: reproduce_all.sh  run_optimization.sh  run_sampling.sh
src/tamed_langevin/: __init__.py  diagnostics.py  optimizers.py  samplers.py  taming.py
tests/: test_diagnostics.py  test_optimizers.py  test_samplers.py  test_taming.py
