[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tamed-langevin-experiments"
version = "0.1.0"
description = "Reproducible experiments for adaptive-tamed kTULA and tRLMC."
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.24",
  "matplotlib>=3.7",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["tamed_langevin*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]